# Decentralized-MF

./: .gitignore  Base.cpp  Base.h  Builder.cpp  Builder.h  CMakeLists.txt  Client.cpp  Client.h  Data.cpp  Data.h  ML2021Spring.ipynb  ML2021Spring_HW1.ipynb  README.md  Server.cpp  Server.h  base.cpp  base.h  basic.cpp  goDML_no_libs.sh  gomaster.sh  grid_search  grid_search.cpp  grid_search.sh  main.cpp  script  script.cpp  test  test.cpp  test.ipynb  test2.ipynb  work.sh
model/: lc_al0.100_et0.010.csv  learning_curve.csv  learning_curve_alpha0.120000.csv  learning_curve_alpha0.150000.csv  model.out  model_explore.ipynb  plot.ipynb
pytorch/: GNN.ipynb  MF.ipynb  N20_100K.pt  VTensor.pt  baseline.ipynb  baseline100K.py  baseline1M.ipynb  baseline1M.py  exec_100K.sh  main copy.ipynb  main.ipynb  main.py  main_100K.ipynb  similarity.ipynb  test.ipynb  test.py  test2.ipynb  test_greeze.ipynb
pytorch/models/: MF_100K.pth  MF_1M.pth  model.pth
pytorch/utils/: mylib.py
